Applying logistic regression

--- a/algorithm.ipynb
+++ b/algorithm.ipynb
@@ -949,6 +949,68 @@
     "x=df.iloc[:, 2:].values\n",
     "y= df.iloc[:,1].values"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#training 75%, testing 25%\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=0.25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feature Scaling (Scaling the data between 0 and 1) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.53028749, -0.30906392, -0.56168626, ..., -0.48541752,\n",
+       "         0.35909611, -0.14636812],\n",
+       "       [ 0.88402373, -0.50608954,  0.84906634, ...,  1.09159783,\n",
+       "         0.39965494, -0.15683111],\n",
+       "       [-0.82435219,  2.3095441 , -0.87040263, ..., -1.73542939,\n",
+       "        -2.15068451, -1.37274082],\n",
+       "       ...,\n",
+       "       [-1.27077043, -0.56107344, -1.23720643, ..., -0.49927102,\n",
+       "         0.14656782,  0.78593946],\n",
+       "       [ 0.59275964,  0.59358837,  0.62565317, ..., -0.14151582,\n",
+       "        -0.2525311 , -0.24494051],\n",
+       "       [-0.60030289,  2.0483706 , -0.62261712, ..., -0.65211621,\n",
+       "        -0.72139122, -0.11222573]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#feature scaling by normalizing x_train and x_test\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "stdsc= StandardScaler()\n",
+    "x_train=stdsc.fit_transform(x_train)\n",
+    "x_test=stdsc.fit_transform(x_test)\n",
+    "x_train\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Building Logistic Regression Model "
+   ]
   }
  ],
  "metadata": {
