--- a/algorithm.ipynb
+++ b/algorithm.ipynb
@@ -1110,6 +1110,61 @@
     "plt.ylabel('Predicted Values')\n",
     " "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9790209790209791\n"
+     ]
+    }
+   ],
+   "source": [
+    "#checking accuracy of prediction \n",
+    "from sklearn.metrics import accuracy_score\n",
+    "print(accuracy_score(y_test, pr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test output:\n",
+      "[0 0 0 1 1 1 0 0 0 1 1 1 1 0 0 0 0 0 1 0 0 1 0 1 0 0 1 0 0 0 1 0 0 0 0 1 1\n",
+      " 0 0 0 0 0 0 0 0 0 1 0 1 0 1 1 0 1 1 0 1 0 1 0 0 0 0 0 1 0 1 0 0 1 1 0 0 0\n",
+      " 1 1 1 0 0 0 1 1 0 0 0 1 0 0 0 0 1 0 0 1 1 0 0 0 0 0 0 0 0 0 1 0 1 0 1 0 0\n",
+      " 1 1 0 1 1 0 0 0 0 0 1 0 1 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 1 1 0 0]\n",
+      "Predicted output:\n",
+      "[0 0 0 1 1 1 0 0 0 1 1 1 1 0 0 0 0 0 1 0 0 1 0 1 0 0 1 0 0 0 1 0 0 0 0 1 1\n",
+      " 0 0 0 0 0 0 0 0 0 1 0 1 0 1 1 0 1 1 0 1 0 1 0 0 0 0 0 1 0 1 0 0 1 1 0 0 0\n",
+      " 1 1 1 0 0 0 1 1 0 0 0 1 0 0 0 0 1 0 0 1 1 1 0 0 0 0 0 0 0 0 0 0 1 0 1 0 0\n",
+      " 1 1 0 1 1 0 0 0 1 0 1 0 1 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 1 1 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Test output:')\n",
+    "print(y_test)\n",
+    "print('Predicted output:')\n",
+    "print(pr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
