--- a/algorithm.ipynb
+++ b/algorithm.ipynb
@@ -1113,21 +1113,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9790209790209791\n"
+      "0.9790209790209791\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      0.98      0.98        94\n",
+      "           1       0.96      0.98      0.97        49\n",
+      "\n",
+      "    accuracy                           0.98       143\n",
+      "   macro avg       0.97      0.98      0.98       143\n",
+      "weighted avg       0.98      0.98      0.98       143\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "#checking accuracy of prediction \n",
-    "from sklearn.metrics import accuracy_score\n",
-    "print(accuracy_score(y_test, pr))"
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "print(accuracy_score(y_test, pr))\n",
+    "print(classification_report(y_test, pr))"
    ]
   },
   {
